@@ -49,6 +49,8 @@ v13.0.00
 		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
 		Departments: included participants in Class page, rather than as a subpage.
 		Markbook: added settings to enable/disable Effort and Rubrics
+		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
+		Markbook: removed Learning Area rubrics from multiple column add
 		Messenger: fixed formatting of Sent From Gibbon tag
 		Messenger: fixed display of email/SMS report for recipients with , in their name
 		Messenger: disabled Canned Response for any non-staff users
